2008-11-22  Jürg Billeter  <j@bitron.ch>

	* tests/:

	Prepare support for more complex test cases

2008-11-22  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodemethodmodule.vala:

	Whitespace fixes

2008-11-22  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodebasemodule.vala:
	* gobject/valaccodemethodmodule.vala:
	* gobject/valadbusclientmodule.vala:
	* gobject/valagasyncmodule.vala:

	Support async method calls in static D-Bus clients

2008-11-21  Jürg Billeter  <j@bitron.ch>

	* gobject/valagasyncmodule.vala:

	Fix return type of finish vfunc

2008-11-21  Jürg Billeter  <j@bitron.ch>

	* vala/valamethod.vala:
	* gobject/valaccodemethodcallmodule.vala:
	* gobject/valaccodemethodmodule.vala:
	* gobject/valadbusclientmodule.vala:
	* gobject/valagasyncmodule.vala:

	Various coroutine code generation improvements

2008-11-21  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodemethodmodule.vala:

	Small refactoring

2008-11-21  Jürg Billeter  <j@bitron.ch>

	* gobject/valadbusmodule.vala:

	Support serialization and deserialization of GHashTable objects
	in static D-Bus clients

2008-11-21  Jürg Billeter  <j@bitron.ch>

	* gobject/valadbusmodule.vala:

	Support serialization and deserialization of GValue values in
	static D-Bus clients

2008-11-21  Jürg Billeter  <j@bitron.ch>

	* gobject/valadbusclientmodule.vala:
	* gobject/valadbusmodule.vala:

	Support serialization and deserialization of structs in static
	D-Bus clients

2008-11-21  Jürg Billeter  <j@bitron.ch>

	* gobject/valadbusclientmodule.vala:
	* gobject/valadbusmodule.vala:

	Support serialization and deserialization of arrays in static
	D-Bus clients

2008-11-21  Jürg Billeter  <j@bitron.ch>

	* gobject/Makefile.am:
	* gobject/valaccodebasemodule.vala:
	* gobject/valadbusclientmodule.vala:
	* gobject/valadbusmodule.vala:
	* vapi/dbus-glib-1.vapi:

	Add partial static D-Bus client support without dbus-glib
	marshalling

2008-11-21  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi:
