@@ -1,3 +1,15 @@
+2008-11-24  Jürg Billeter  <j@bitron.ch>
+
+	* ccode/valaccodefunctioncall.vala:
+	* gobject/valaccodearraymodule.vala:
+	* gobject/valaccodebasemodule.vala:
+	* gobject/valaccodemethodcallmodule.vala:
+	* vala/valasemanticanalyzer.vala:
+	* vapi/glib-2.0.vapi:
+
+	Add g_array_index binding and fix g_array_free calls,
+	fixes bug 519978
+
 2008-11-22  Jürg Billeter  <j@bitron.ch>
 
 	* tests/:
